# Novomatic-tasks

./: README.md
task-1/: README.md
task-1/document/triangle/: CMakeLists.txt
task-1/document/triangle/include/: triangle.h
task-1/triangle/: main.cpp
task-1/triangle/src/: triangle.cpp
task-2/: README.md
task-2/rectangle/: CMakeLists.txt  main.cpp
task-2/rectangle/include/: Functions.h
task-2/rectangle/src/: Functions.cpp
task-3/: README.md
task-3/whitespaces/: CMakeLists.txt
task-3/whitespaces/include/: whitespace.h
whitespaces/: main.cpp
